added clicker.html temp

--- a/clicker.html
+++ b/clicker.html
@@ -5,24 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="/styles/main.css">
      <script type="module" src="/components/site-header.js"></script>
-    <script type="module" src="/components/clicker-comp.js"></script>
-    <title>Nerdy Thirty Prof Collector</title>
+    <title>Nerdy Thirty Clicker</title>
     <script src="index.js" type="module"></script>
 </head>
 <body>
     <site-header></site-header> 
-    <div id="card_shuffler" style="background-color:var(--secondary-background-color)"  >
-        <clicker-comp></clicker-comp>
-         <div id="frog-card"></div>
-         <div id ="card_buttons">
-            <button id="next" style="margin-bottom: 30px; width: 100%">
-                Next
-            </button> 
-            <button id="prev" >
-                Previous
-            </button>
-     
-         </div>
+    <div> 
+        <div id="clicker_comp">
+            <img style="width:200px; height:200px" class="" src="assests/placeholder_front.png" alt="clicker img">
+        </div>
     </div>
 </body>
 </html>
