split up script files,added shop.html and shop.js

--- a/shop.html
+++ b/shop.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="/styles/main.css">
      <script type="module" src="/components/site-header.js"></script>
-     <script type="module" src="/scripts/clicker.js"></script>
-    <title>Nerdy Thirty Clicker</title>
+     <script type="module" src="/scripts/shop.js"></script>
+    <title>Nerdy Thirty Shop</title>
     <script src="index.js" type="module"></script>
 </head>
 <body>
     <site-header></site-header> 
     <div> 
-        <div id="clicker_comp">
-            <img style="width:200px; height:200px" class="" src="assests/placeholder_front.png" alt="clicker img">
-        </div>
+
     </div>
 </body>
 </html>
