Added grid view, added way to be directed to grid view on home page(index.html) implemented grid view displaying all cards

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
             <button id="next" style="margin-bottom: 30px; width: 100%">
                 Next
             </button> 
-            <button id="prev" >
+            <button id="prev" style="margin-bottom: 30px; width: 100%">
                 Previous
+            </button>
+            <button id="view-all" style="margin-bottom: 30px; width: 100%">
+                View All Cards
             </button>
      
          </div>
