add shop navigation in the header and add todos

--- a/shop.html
+++ b/shop.html
@@ -14,7 +14,7 @@
     <site-header></site-header> 
     <p id="points-display">Points: 0</p>
     <h1>🛒 Card Shop</h1>
-    <button id="generate-card" style="margin: 1rem 0; padding: 1rem;">Generate Random Card</button>
+    <button id="generate-card" style="margin: 1rem 0; padding: 1rem;">Buy Random Card (-1)</button> <!-- temporary button name-->
     <button id="add-points">Add 500 Points</button> <!-- temporary -->
 
     <div id="result" style="margin-top: 1.5rem; font-size: 1.2rem;"></div>
