add bio for Kastner, lower bio text size so it fits on the card

--- a/shop.html
+++ b/shop.html
@@ -14,7 +14,7 @@
 <body style="background-color: var(--secondary-background-color); color: white;">
     <site-header></site-header> 
     <p id="points-display" style="margin:0rem; margin-left: 1rem; margin-top: 0.25rem;;">Points: 0</p>
-    <h1 id="shoptitle">🛒 Card Shop</h1>
+    <h1 id="shoptitle">🛒 Card Shop 🛒</h1>
     <div id="gen-container">
         <div id="result" style="margin-top: 1rem; font-size: 1.2rem;"></div>
         <div id="card-container" style="margin-top: 1rem;"></div>
