--- a/shop.html
+++ b/shop.html
@@ -7,6 +7,7 @@
      <link rel="stylesheet" href="shop.css">
      <script type="module" src="/components/site-header.js"></script>
      <script type="module" src="/components/frog-card.js"></script>
+     <script type="module" src="/components/pack-cover.js"></script>
      <script type="module" src="/scripts/shop.js"></script>
     <title>Nerdy Thirty Shop</title>
     <script src="index.js" type="module"></script>
