add reminders to change stuff when add points button is removed

--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
         <div id="result" style="margin-top: 1rem; font-size: 1.2rem;"></div>
     </div>
     <div id="buttoncont">
-        <div id="button-row">
+        <div id="button-row"> <!-- no longer necessary when add points button is removed -->
             <button id="generate-card" style="margin: 1rem 0; padding: 1rem;">Buy Random Card (-1)</button> <!-- temporary button name-->
             <div class="tooltip-container">
                 <span class="tooltip-icon">❔</span>
