change tooltip positioning and font

--- a/shop.html
+++ b/shop.html
@@ -32,7 +32,7 @@
                     Rare: 15%<br>
                     Epic: 4%<br>
                     Legendary: 0.9%<br>
-                    Special-edition: 0.1%
+                    Special-Edition: 0.1%
                 </div>
             </div>
         </div>
