--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="/styles/main.css">
-     <link rel="stylesheet" href="shop.css">
+     <link rel="stylesheet" href="/styles/shop.css">
      <script type="module" src="/components/site-header.js"></script>
      <script type="module" src="/components/frog-card.js"></script>
      <script type="module" src="/components/pack-cover.js"></script>
