update points display

--- a/shop.html
+++ b/shop.html
@@ -14,7 +14,10 @@
 </head>
 <body style="background-color: var(--secondary-background-color); color: white;">
     <site-header></site-header> 
-    <p id="points-display" style="margin:0rem; margin-left: 1rem; margin-top: 0.25rem;;">Points: 0</p>
+    <div id="points">
+        <p id="points-display" style="margin:0rem; margin-left: 1rem; margin-top: 0.25rem; font-size: 1.5rem;">0</p>
+        <img id="points-img" style="margin:0rem; margin-left: 0.4rem; margin-top: 0.6rem; width: 1.5rem; height: 1.5rem;" src="/assests/point.png" alt="points">
+    </div>
     <h1 id="shoptitle">🛒 Card Shop 🛒</h1>
     <div id="gen-container">
         <div id="card-container" style="margin-top: 1rem;"></div>
