changed shop title layout, added ripping/card opening sounds, and made it so result text appears after pack cover is removed

--- a/shop.html
+++ b/shop.html
@@ -14,11 +14,13 @@
 </head>
 <body style="background-color: var(--secondary-background-color); color: white;">
     <site-header></site-header> 
-    <div id="points">
-        <p id="points-display" style="margin:0rem; margin-left: 1rem; margin-top: 0.25rem; font-size: 1.5rem;">0</p>
-        <img id="points-img" style="margin:0rem; margin-left: 0.4rem; margin-top: 0.6rem; width: 1.5rem; height: 1.5rem;" src="/assests/point.png" alt="points">
+    <div id="top-bar">
+        <div id="points">
+            <p id="points-display">0</p>
+            <img id="points-img" src="/assests/point.png" alt="points">
+        </div>
+        <h1 id="shoptitle">Card Shop</h1>
     </div>
-    <h1 id="shoptitle">🛒 Card Shop 🛒</h1>
     <div id="gen-container">
         <div id="card-container" style="margin-top: 1rem;"></div>
         <div id="result" style="margin-top: 1rem; font-size: 1.2rem;"></div>
