--- a/shop.html
+++ b/shop.html
@@ -27,7 +27,6 @@
     </div>
     <div id="buttoncont">
         <div id="button-row"> <!-- no longer necessary when add points button is removed -->
-            <button id="generate-card" style="margin: 1rem 0; padding: 1rem;">Buy Random Card (-1)</button> <!-- temporary button name-->
             <div class="tooltip-container">
                 <span class="tooltip-icon">❔</span>
                 <div class="tooltip-text">
@@ -40,6 +39,8 @@
                     Special-Edition: 0.1%
                 </div>
             </div>
+            <button id="generate-card" style="margin: 1rem 0; padding: 1rem;">Buy Random Card</button> <!-- temporary button name-->
+            <p>Cost = 100</p>
         </div>
         <button id="add-points">Add 500 Points</button> <!-- temporary -->
     </div>
