remove add points button, change html tags to reduce divs/spans

--- a/shop.html
+++ b/shop.html
@@ -26,23 +26,20 @@
         <div id="result" style="margin-top: 1rem; font-size: 1.2rem;"></div>
     </div>
     <div id="buttoncont">
-        <div id="button-row"> <!-- no longer necessary when add points button is removed -->
-            <div class="tooltip-container">
-                <span class="tooltip-icon">❔</span>
-                <div class="tooltip-text">
-                    Drop Rates:<br>
-                    Common: 55%<br>
-                    Uncommon: 25%<br>
-                    Rare: 15%<br>
-                    Epic: 4%<br>
-                    Legendary: 0.9%<br>
-                    Special-Edition: 0.1%
-                </div>
-            </div>
-            <button id="generate-card" style="margin: 1rem 0; padding: 1rem;">Buy Random Card</button> <!-- temporary button name-->
-            <p>Cost = 100</p>
+        <div class="tooltip-container">
+            <p class="tooltip-icon">❔</p>
+            <p class="tooltip-text">
+                Drop Rates:<br>
+                Common: 55%<br>
+                Uncommon: 25%<br>
+                Rare: 15%<br>
+                Epic: 4%<br>
+                Legendary: 0.9%<br>
+                Special-Edition: 0.1%
+            </p>
         </div>
-        <button id="add-points">Add 500 Points</button> <!-- temporary -->
+        <button id="generate-card" style="margin: 1rem 0; padding: 1rem;">Buy Random Card</button> <!-- temporary button name-->
+        <p>Cost = 100</p>
     </div>
 </body>
 </html>
