make buy, open, and flip key activatable

--- a/shop.html
+++ b/shop.html
@@ -38,7 +38,7 @@
                 Special-Edition: 0.1%
             </p>
         </div>
-        <button id="generate-card" style="margin: 1rem 0; padding: 1rem;">Buy Random Card</button> <!-- temporary button name-->
+        <button id="generate-card" style="margin: 1rem 0; padding: 1rem;">Buy Random Card [B]</button> <!-- temporary button name-->
         <p>Cost = 100</p>
     </div>
 </body>
