put cardNames, rarities, bios, courses, images in a separate file to simplify shop.js code

--- a/shop.html
+++ b/shop.html
@@ -39,7 +39,7 @@
             </p>
         </div>
         <button id="generate-card" style="margin: 1rem 0; padding: 1rem;">Buy Random Card [B]</button> <!-- temporary button name-->
-        <p>Cost = 100</p>
+        <p>Cost: 100</p>
     </div>
 </body>
 </html>
