replace pngs with webps and rename assests folder to assets

--- a/clicker.html
+++ b/clicker.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <site-header></site-header> 
-        <img id="clicker-comp" src="/assests/clicker-assets/point.png" alt="clicker img">
+        <img id="clicker-comp" src="/assets/misc-images/point.webp" alt="clicker img">
     <h1 id="points_display">Points: </h1>
 </body>
 </html>
