--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
     <div id="top-bar">
         <div id="points">
             <p id="points-display">0</p>
-            <img id="points-img" src="/assests/point.png" alt="points">
+            <img id="points-img" src="/assets/misc-images/point.webp" alt="points">
         </div>
         <h1 id="shoptitle">Card Shop</h1>
     </div>
