added search bar and hover effect

--- a/grid.html
+++ b/grid.html
@@ -12,8 +12,11 @@
 <body>
     <site-header></site-header>
     <div style="padding: 21px; text-align: center;">
-        <a href="index.html" class="back-button">Back to Home</a>
-    </div>
+        <a href="index.html" class="back-button">Back to Homee</a>
+    </div> 
+    <div class = "search-wrapper">
+        <input id="search-input" type="text" placeholder="Search by name..." />
+    </div> 
     <div class="grid-container" id="card-grid"></div>
     <script type="module" src="./scripts/grid.js"></script>
 </body>
