added search and hover

--- a/grid.html
+++ b/grid.html
@@ -14,6 +14,7 @@
     <div style="padding: 21px; text-align: center;">
         <a href="index.html" class="back-button">Back to Homee</a>
     </div> 
+    <!-- search bar -->
     <div class = "search-wrapper">
         <input id="search-input" type="text" placeholder="Search by name..." />
     </div> 
