--- a/shop.html
+++ b/shop.html
@@ -6,6 +6,7 @@
      <link rel="stylesheet" href="/styles/main.css">
      <script type="module" src="/components/site-header.js"></script>
      <script type="module" src="/components/frog-card.js"></script>
+     <link rel="stylesheet" href="/styles/shop.css">
      <script type="module" src="/components/pack-cover.js"></script>
      <script type="module" src="/scripts/shop.js"></script>
     <title>Nerdy Thirty Shop</title>
