--- a/clicker.html
+++ b/clicker.html
@@ -11,9 +11,11 @@
     <script src="index.js" type="module"></script>
 </head>
 <body>
-    <site-header></site-header> 
-        <img id="clicker-comp" src="/assets/misc-images/point.webp" alt="clicker img">
-    <h1 id="points_display">Points: </h1>
+    <site-header></site-header>
+    <div id="clicker-comp">
+        <h1 id="points_display">Points: </h1>
+        <img id="clicker-button" draggable=false src="/assets/misc-images/point.webp" alt="clicker img">
+    </div>
 </body>
 </html>
 
