--- a/clicker.html
+++ b/clicker.html
@@ -14,7 +14,7 @@
     <site-header></site-header>
     <div id="clicker-comp">
         <h1 id="points_display">Points: </h1>
-        <img id="clicker-button" draggable=false src="/assets/misc-images/point.webp" alt="clicker img">
+        <img id="clicker-button" draggable="false" src="/assets/misc-images/point.webp" alt="clicker img">
     </div>
 </body>
 </html>
