--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,7 @@
     <title>Nerdy Thirty Shop</title>
     <script src="index.js" type="module"></script>
 </head>
-<body style="background-color: var(--secondary-background-color); color: white;">
+<body>
     <site-header></site-header> 
     <div id="top-bar">
         <div id="points">
