Improving the mobile UI

--- a/clicker.html
+++ b/clicker.html
@@ -12,8 +12,10 @@
 </head>
 <body>
     <site-header></site-header> 
+    <div class="clicker-container">
         <img id="clicker-comp" src="/assets/misc-images/point.webp" alt="clicker img">
-    <h1 id="points_display">Points: </h1>
+        <h1 id="points_display">Points: </h1>
+    </div>
 </body>
 </html>
 
