addded another messsage in the popup

--- a/clicker.html
+++ b/clicker.html
@@ -18,7 +18,8 @@
         <div class="tooltip-container">
             <p class="tooltip-icon">❔</p>
             <p class="tooltip-text">
-                Click the Popup for an extra 10 points
+                Click the Coin to obtain points<br>
+                Click the Popups for an extra 10 points
             </p>
         </div>
     </div>
