Added card-thumbnail component, replaced frog-cards with their thumbnails in the collection page, added viewer.html that displays the selected card based on thumbnail clicked

--- a/grid.html
+++ b/grid.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/grid.css" />
     <script type="module" src="./components/site-header.js"></script>
-    <script type="module" src="./components/frog-card.js"></script>
+    <script type="module" src="./components/card-thumbnail.js"></script>
 </head>
 <body>
     <site-header></site-header>
