--- a/grid.html
+++ b/grid.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/grid.css" />
     <script type="module" src="./components/site-header.js"></script>
     <script type="module" src="./components/card-thumbnail.js"></script>
+    <script type="module" src="./components/frog-card.js"></script>
 </head>
 <body>
     <site-header></site-header>
@@ -16,5 +17,12 @@
     </div>
     <div class="grid-container" id="card-grid"></div>
     <script type="module" src="./scripts/grid.js"></script>
+    <!-- Modal -->
+    <div id="card-modal" class="modal hidden">
+        <div class="modal-content">
+            <span id="modal-close" class="close-button">&times;</span>
+            <card-display></card-display>
+        </div>
+    </div>
 </body>
 </html>
