added card info at the top of the modal

--- a/grid.html
+++ b/grid.html
@@ -21,6 +21,7 @@
     <div id="card-modal" class="modal hidden">
         <div class="modal-content">
             <span id="modal-close" class="close-button">&times;</span>
+            <h2 id="card-title" class="card-title"></h2>
             <card-display></card-display>
         </div>
     </div>
