--- a/grid.html
+++ b/grid.html
@@ -23,6 +23,12 @@
             <span id="modal-close" class="close-button">&times;</span>
             <h2 id="card-title" class="card-title"></h2>
             <card-display></card-display>
+            <div id="crafting-ui" class="crafting-ui hidden">
+                <label for="craft-slider">Craft how many?</label>
+                <input type="range" id="craft-slider" min="1" value="1" step="1" />
+                <div id="craft-summary"></div>
+                <button id="craft-button">Craft</button>
+            </div>
         </div>
     </div>
 </body>
