implement non broken card merging

--- a/grid.html
+++ b/grid.html
@@ -24,7 +24,7 @@
             <h2 id="card-title" class="card-title"></h2>
             <card-display></card-display>
             <div id="crafting-ui" class="crafting-ui hidden">
-                <label for="craft-slider">Craft how many?</label>
+                <label for="craft-slider">Merge multiple cards into one of higher rarity</label>
                 <input type="range" id="craft-slider" min="1" value="1" step="1" />
                 <div id="craft-summary"></div>
                 <button id="craft-button">Craft</button>
