--- a/grid.html
+++ b/grid.html
@@ -14,11 +14,22 @@
     <div style="padding: 21px; text-align: center;">
         <a href="index.html" class="back-button">Back to Homee</a>
     </div> 
-    <!-- search bar -->
+    <!-- search bar
     <div class = "search-wrapper">
         <input id="search-input" type="text" placeholder="Search by name..." />
-    </div> 
+    </div>  -->
+    <div class="search-wrapper">
+        <input id="search-input" type="text" placeholder="Search by name..." />
+        <select id="sort-select" style="margin-left: 10px; font-size: 1rem;">
+            <option value="default">Sort: Default</option>
+            <option value="az">Sort: A → Z</option>
+            <option value="za">Sort: Z → A</option>
+            <option value="rarity-asc">Sort: Rarity Low → High</option>
+            <option value="rarity-desc">Sort: Rarity High → Low</option>
+        </select>
+      </div>
     <div class="grid-container" id="card-grid"></div>
     <script type="module" src="./scripts/grid.js"></script>
+
 </body>
 </html>
