added sorting by last name

--- a/grid.html
+++ b/grid.html
@@ -22,8 +22,10 @@
         <input id="search-input" type="text" placeholder="Search by name..." />
         <select id="sort-select" style="margin-left: 10px; font-size: 1rem;">
             <option value="default">Sort: Default</option>
-            <option value="az">Sort: A → Z</option>
-            <option value="za">Sort: Z → A</option>
+            <option value="first-name-az">Sort: First Name (A → Z)</option>
+            <option value="first-name-za">Sort: First Name (Z → A)</option>
+            <option value="last-name-az">Sort: Last Name (A → Z)</option>
+            <option value="last-name-za">Sort: Last Name (Z → A)</option>
             <option value="rarity-asc">Sort: Rarity Low → High</option>
             <option value="rarity-desc">Sort: Rarity High → Low</option>
         </select>
