--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="/styles/main.css">
-     <script type="module" src="/components/site-header.js"></script>
-    <script type="module" src="/components/frog-card.js"></script>
-    <script type="module" src="/components/card-deck.js"></script>
-    <title>Nerdy Thirty Prof Collector</title>
-    <script src="index.js" type="module"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/styles/main.css" />
+  <script type="module" src="/components/site-header.js"></script>
+  <script type="module" src="/components/frog-card.js"></script>
+  <script type="module" src="/components/card-deck.js"></script>
+  <script src="index.js" type="module"></script>
+  <title>Nerdy Thirty Prof Collector</title>
 </head>
 <body>
-    <site-header></site-header> 
-    <div id="card_shuffler" style="background-color:var(--secondary-background-color)"  >
-        <card-deck></card-deck>
-         <div id="frog-card"></div>
-         <div id ="card_buttons">
-            <button id="next" style="margin-bottom: 30px; width: 100%">
-                Next
-            </button> 
-            <button id="prev" style="margin-bottom: 30px; width: 100%">
-                Previous
-            </button>
-            <button id="view-all" style="margin-bottom: 30px; width: 100%">
-                View All Cards
-            </button>
-     
-         </div>
-    </div>
+  <site-header></site-header>
+
+  <div id="card_shuffler" style="background-color: var(--secondary-background-color); padding: 30px; text-align: center;">
+    <card-deck></card-deck>
+
+    <!-- Overview -->
+    <section id="app-overview" style="margin-top: 40px; max-width: 800px; margin-inline: auto;">
+      <h2>Welcome to Nerdy Thirty Professor Collector!</h2>
+      <p>
+        This web app lets you explore, collect, and learn about your favorite professors from the UC San Diego universe. 
+        Browse cards, check rarities, and build your dream collection. Whether you're a casual fan or a dedicated collector, 
+        this is your hub for everything Nerdy and Thirty!
+      </p>
+    </section>
+  </div>
+
+  <!-- Footer -->
+  <footer style="text-align: center; margin-top: 60px; padding: 20px; font-size: 0.9rem; color: #888;">
+    <p>© 2025 Nerdy Thirty. All rights reserved.</p>
+    <p>Powered by Team Thirty</p>
+  </footer>
 </body>
 </html>
