--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
     <site-header></site-header>
 
     <div id="card_shuffler" style="background-color: var(--secondary-background-color); padding: 30px; text-align: center;">
-        <card-deck></card-deck>
-
         <!-- Overview -->
         <section id="app-overview" style="margin-top: 40px; max-width: 800px; margin-inline: auto;">
             <h2>Welcome to Nerdy Thirty Professor Collector!</h2>
-            <!-- <img src="/admin/teambonding.jpg" alt="Team Bonding" style="width: 100%; max-width: 600px; border-radius: 12px; margin-bottom: 20px;" /> -->
+            <img src="/admin/teambonding.jpg" alt="Team Bonding" style="width: 100%; max-width: 600px; border-radius: 12px; margin-bottom: 20px;" />
             <p>
                 This web app lets you explore, collect, and learn about your favorite professors from the UC San Diego universe. 
                 Browse cards, check rarities, and build your dream collection. Whether you're a casual fan or a dedicated collector, 
