--- a/grid.html
+++ b/grid.html
@@ -12,13 +12,7 @@
 </head>
 <body>
     <site-header></site-header>
-    <div style="padding: 21px; text-align: center;">
-        <a href="index.html" class="back-button">Back to Homee</a>
-    </div> 
-    <!-- search bar
-    <div class = "search-wrapper">
-        <input id="search-input" type="text" placeholder="Search by name..." />
-    </div>  -->
+    <h1 id="shoptitle">Your Collection</h1>
     <div class="search-wrapper">
         <input id="search-input" type="text" placeholder="Search by name..." />
         <select id="sort-select" style="margin-left: 10px; font-size: 1rem;">
@@ -30,8 +24,17 @@
             <option value="rarity-asc">Sort: Rarity Low → High</option>
             <option value="rarity-desc">Sort: Rarity High → Low</option>
         </select>
-      </div>
-    <div class="grid-container" id="card-grid"></div>
+    </div>
+    <div class="grid-container" id="card-grid">
+        <div id="no-cards-message" class="no-cards-message hidden">
+            <h2>No Cards Found</h2>
+            <p>Start collecting cards in the shop or gain points using the clicker!</p>
+            <div class="button-group">
+                <a href="shop.html" class="shop-button">Go to Shop</a>
+                <a href="clicker.html" class="clicker-button">Open Clicker</a>
+            </div>
+        </div>
+    </div>
     <script type="module" src="./scripts/grid.js"></script>
 
     <!-- Modal -->
