added everyone's pics and bios

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="/components/site-header.js"></script>
     <script type="module" src="/components/frog-card.js"></script>
     <script type="module" src="/components/card-deck.js"></script>
-    <script type="module" src="/scripts/main.js"></script>
+    <script type="module" src="/index.js"></script>
     <script src="index.js" type="module"></script>
     <title>Nerdy Thirty Prof Collector</title>
 </head>
@@ -26,24 +26,25 @@
             </p>
         </section>
     </div>
-    <section id="contributors" style="margin: 60px auto; max-width: 1200px; padding: 0 20px;">
+    <section id="contributors" style="margin: 60px 0;">
         <h2 style="text-align: center; margin-bottom: 30px;">Contributors</h2>
-        <div class="contributors-grid">
-            <!-- Repeat frog-card 12 times -->
-            <frog-card></frog-card>
-            <frog-card></frog-card>
-            <frog-card></frog-card>
-            <frog-card></frog-card>
-            <frog-card></frog-card>
-            <frog-card></frog-card>
-            <frog-card></frog-card>
-            <frog-card></frog-card>
-            <frog-card></frog-card>
-            <frog-card></frog-card>
-            <frog-card></frog-card>
-            <frog-card></frog-card>
-            <frog-card></frog-card>
-        </div>
+        <div class="contributors-grid-wrapper">
+            <div class="contributors-grid">
+                <!-- Repeat frog-card 12 times -->
+                <frog-card></frog-card>
+                <frog-card></frog-card>
+                <frog-card></frog-card>
+                <frog-card></frog-card>
+                <frog-card></frog-card>
+                <frog-card></frog-card>
+                <frog-card></frog-card>
+                <frog-card></frog-card>
+                <frog-card></frog-card>
+                <frog-card></frog-card>
+                <frog-card></frog-card>
+                <frog-card></frog-card>
+                <frog-card></frog-card>
+            </div>
     </section>
   
 
@@ -52,5 +53,6 @@
     <p>© 2025 Nerdy Thirty. All rights reserved.</p>
     <p>Powered by Team Thirty</p>
   </footer>
+<script type="module" src="index.js"></script>
 </body>
 </html>
