--- a/grid.html
+++ b/grid.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <site-header></site-header>
-    <h1 id="shoptitle">Your Collection</h1>
+    <h1 id="collectiontitle">Your Collection</h1>
+    <p id="total-cards" class="total-cards">Total Filtered Cards: 0</p>
     <div class="search-wrapper">
         <input id="search-input" type="text" placeholder="Search by name..." />
         <select id="sort-select" style="margin-left: 10px; font-size: 1rem;">
