--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 style="text-align: center; margin-bottom: 30px;">Contributors</h2>
         <div class="contributors-grid-wrapper">
             <div class="contributors-grid">
-                <!-- Repeat frog-card 12 times -->
+                <!-- Contributer Cards -->
                 <frog-card></frog-card>
                 <frog-card></frog-card>
                 <frog-card></frog-card>
