add sort by quantity

--- a/grid.html
+++ b/grid.html
@@ -24,6 +24,8 @@
             <option value="last-name-za">Sort: Last Name (Z → A)</option>
             <option value="rarity-asc">Sort: Rarity Low → High</option>
             <option value="rarity-desc">Sort: Rarity High → Low</option>
+            <option value="quantity-asc">Sort: Quantity Low → High</option>
+            <option value="quantity-desc">Sort: Quantity High → Low</option>
         </select>
     </div>
     <div class="grid-container" id="card-grid">
