--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="index.js" type="module"></script>
 </head>
 <body>
+    <noscript>
+      JavaScript is disabled in your browser. Please enable JavaScript to use this site.
+    </noscript>
     <site-header></site-header> 
     <div id="card_shuffler" style="background-color:var(--secondary-background-color)"  >
         <card-deck></card-deck>
