--- a/grid.html
+++ b/grid.html
@@ -11,6 +11,9 @@
     <script type="module" src="./components/frog-card.js"></script>
 </head>
 <body>
+    <noscript>
+      JavaScript is disabled in your browser. Please enable JavaScript to use this site.
+    </noscript>
     <site-header></site-header>
     <div style="padding: 21px; text-align: center;">
         <a href="index.html" class="back-button">Back to Homee</a>
