--- a/clicker.html
+++ b/clicker.html
@@ -11,7 +11,9 @@
     <script src="index.js" type="module"></script>
 </head>
 <body>
-
+    <noscript>
+      JavaScript is disabled in your browser. Please enable JavaScript to use this site.
+    </noscript>
     <site-header></site-header> 
     <div class="clicker-container">
         <img id="clicker-comp" src="/assets/misc-images/point.webp" alt="clicker img">
