added no scripts

--- a/shop.html
+++ b/shop.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+    <noscript>
+      JavaScript is disabled in your browser. Please enable JavaScript to use this site.
+    </noscript>
     <site-header></site-header>
     <div id="top-bar">
         <!-- <div id="points">
