--- a/clicker.html
+++ b/clicker.html
@@ -14,7 +14,9 @@
 
     <site-header></site-header> 
     <div class="clicker-container">
-        <img id="clicker-comp" draggable="false" src="/assets/misc-images/point.webp" alt="clicker img">
+        <div id="clicker-comp-wrapper">
+            <img id="clicker-comp" draggable="false" src="/assets/misc-images/point.webp" alt="clicker img">
+        </div>
         <h1 id="points_display">Points: </h1>
 
         <div class="tooltip-container">
