fix naming inconsistencies

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script type="module" src="/components/frog-card.js"></script>
     <script type="module" src="/components/card-deck.js"></script>
     <script type="module" src="/index.js"></script>
-    <script src="index.js" type="module"></script>
     <title>Nerdy Thirty Prof Collector</title>
 </head>
 <body>
@@ -30,7 +29,7 @@
         <h2 style="text-align: center; margin-bottom: 30px;">Contributors</h2>
         <div class="contributors-grid-wrapper">
             <div class="contributors-grid">
-                <!-- Contributer Cards -->
+                <!-- Contributor Cards -->
                 <frog-card></frog-card>
                 <frog-card></frog-card>
                 <frog-card></frog-card>
@@ -45,14 +44,13 @@
                 <frog-card></frog-card>
                 <frog-card></frog-card>
             </div>
+        </div>
     </section>
-  
 
-  <!-- Footer -->
-  <footer style="text-align: center; margin-top: 60px; padding: 20px; font-size: 0.9rem; color: #888;">
-    <p>© 2025 Nerdy Thirty. All rights reserved.</p>
-    <p>Powered by Team Thirty</p>
-  </footer>
-<script type="module" src="index.js"></script>
+    <!-- Footer -->
+    <footer style="text-align: center; margin-top: 60px; padding: 20px; font-size: 0.9rem; color: #888;">
+        <p>© 2025 Nerdy Thirty. All rights reserved.</p>
+        <p>Powered by Team Thirty</p>
+    </footer>
 </body>
 </html>
