--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
         <card-deck></card-deck>
          <div id="frog-card"></div>
          <div id ="card_buttons">
-            <button id="next" style="margin-bottom: 30px; width: 100%">
-                Next
-            </button> 
-            <button id="prev" style="margin-bottom: 30px; width: 100%">
-                Previous
-            </button>
-            <button id="view-all" style="margin-bottom: 30px; width: 100%">
-                View All Cards
-            </button>
-     
+            <div id="next-prev" style="width: 100%">
+                <button id="next" style="width: 100%">
+                    Next
+                </button> 
+                <button id="prev" style=" width: 100%">
+                    Previous
+                </button>
+            </div>
+            <div id ="view-A" style="width: 100%">
+                <button id="view-all" style="width: 100%">
+                    View All Cards
+                </button>
+            </div>
          </div>
     </div>
 </body>
