addded the popup message

--- a/grid.html
+++ b/grid.html
@@ -39,7 +39,9 @@
         </div>
     </div>
     <script type="module" src="./scripts/grid.js"></script>
-
+    <div id="craft-popup" class="hidden">
+    You crafted <span id="crafted-amount"></span> new card(s)!
+    </div>
     <!-- Modal -->
     <div id="card-modal" class="modal hidden">
         <div class="modal-content">
