Frenzy and alignment

--- a/clicker.html
+++ b/clicker.html
@@ -13,7 +13,7 @@
 <body>
 
     <site-header></site-header> 
-    <div class="clicker-container">
+    <div id="clicker-container">
         <div id="clicker-comp-wrapper">
             <img id="clicker-comp" draggable="false" src="/assets/misc-images/point.webp" alt="clicker img">
         </div>
