edit shop and frog-card

--- a/shop.html
+++ b/shop.html
@@ -35,8 +35,8 @@
         <h1 id="shoptitle">Card Shop</h1>
     </div>
     <div id="gen-container">
-        <div id="card-container" style="margin-top: 1rem;"></div>
-        <div id="result" style="margin-top: 1rem; font-size: 1.2rem;"></div>
+        <div id="card-container" style="margin-top: 1rem; max-width: 95vw;"></div>
+        <div id="result" style="margin-top: 1rem; font-size: 1rem; max-width: 95vw;"></div>
     </div>
     <div id="buttoncont">
         <div id="points">
