Adjusted bg colors, overlapping issues, and header text

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <site-header></site-header>
 
-    <div id="card_shuffler" style="background-color: var(--secondary-background-color); padding: 30px; text-align: center;">
+    <div id="card_shuffler" style="background-color: var(--background-color); padding: 30px; text-align: center;">
         <!-- Overview -->
         <section id="app-overview" style="margin-top: 40px; max-width: 800px; margin-inline: auto;">
-            <h2>Welcome to Nerdy Thirty Professor Collector!</h2>
+            <h2>Welcome to Nerdy Thirty's CSE Card Collector!</h2>
             <img src="/admin/teambonding.jpg" alt="Team Bonding" style="width: 100%; max-width: 600px; border-radius: 12px; margin-bottom: 20px;" />
             <p>
                 This web app lets you explore, collect, and learn about your favorite professors from the UC San Diego universe. 
