Tooltip displays probabilities

--- a/clicker.html
+++ b/clicker.html
@@ -19,11 +19,15 @@
         </div>
         <h1 id="points_display">Points: </h1>
 
+        <!-- Clicker Features: -->
+        <!-- 5% chance of clickable popups to earn bonus points -->
+        <!-- 0.5% chance of trigger 'frenzy' event, earning double points per click (including popup)-->
         <div class="tooltip-container">
             <p class="tooltip-icon">?</p>
             <p class="tooltip-text">
                 Click the Coin to obtain points<br>
-                Click the Popups for an extra 10 points
+                Click the Popups for an extra 10 points (5% chance)<br>
+                Trigger a Frenzy for x2 the points! (0.5% chance)
             </p>
         </div>
 
