--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="/components/frog-card.js"></script>
     <script type="module" src="/components/card-deck.js"></script>
     <script type="module" src="/index.js"></script>
-    <title>Nerdy Thirty Prof Collector</title>
+    <title>Nerdy Thirty Prof Collector!</title>
 </head>
 <body>
     <site-header></site-header>
